--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first ever github repo</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
     <h2>Bombs away - what happens in the aftermath of US attack on Iran?</h2>
